.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plant-service
  template:
    metadata:
      labels:
        app: plant-service
    spec:
      containers:
      - name: server
        image: plant-service
        ports:
          - containerPort: 8080
            name: rest
          - containerPort: 50051
            name: grpc
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 50m
            memory: 50Mi
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
