.k8s/service.yaml
# This Service manifest defines:
# - a load balancer for pods matching label "app: go-hello-world"
# - exposing the application to the public Internet (type:LoadBalancer)
# - routes port 80 of the load balancer to the port 8080 of the Pods.
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: v1
kind: Service
metadata:
  name: plant-service
spec:
  type: LoadBalancer
  selector:
    app: plant-service
  ports:
  - name: http
    port: 8080
    targetPort: rest
  - name: grpc
    port: 50051
    targetPort: grpc
