.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plant-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  rules:
  - host: "plants.api.smartgarden.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: plant-service
            port:
              name: grpc
  tls:  
  - secretName: plants-api-tls-secret
    hosts:
      - plants.api.smartgarden.io
